--- a/day5/work5.html
+++ b/day5/work5.html
@@ -10,7 +10,7 @@
     <nav>
         <a href="./work4.html">🔙</a>
         <h1>✨ 누나 코딩 강의 스터디 5일차-문제5 ✨</h1>
-        <a href="../index.html">🔜</a>
+        <a href="../index.html">🛖</a>
     </nav>
 
     <main class="work5">
