--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <div class="container mt-5">
+    <div class="container">
       <nav>
         <h1>✨ 누나 코딩 강의 스터디 5일차 ✨</h1>
       </nav>
